docker php. phpMyAdmin ready

--- a/apache2.conf
+++ b/apache2.conf
@@ -60,5 +60,7 @@ CustomLog /proc/self/fd/1 combined
 DirectoryIndex disabled
 DirectoryIndex index.php index.html
 
+AddDefaultCharset ISO-8859-1
+
 IncludeOptional conf-enabled/*.conf
 IncludeOptional sites-enabled/*.conf
